--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">   
     <!-- SVG Türkiye Haritası -->
-    <link href="css-files/master.css" rel="stylesheet" />
+    <link href="css/master.css" rel="stylesheet" />
     <link rel="stylesheet" href="css-files/all.min.css">
   </head>
   <body>
